# MiAPR_Labs

./: .gitmodules  CMakeLists.txt  Mall_Customers.csv
include/glad/: glad.c  glad.h
shaders/: Base.fs  Base.vs
src/: main.cpp
src/classes/Camera/: Camera.cpp  Camera.h
src/classes/EBO/: EBO.cpp  EBO.h
src/classes/Point/: Point.cpp  Point.hpp
src/classes/Points/: Points.cpp  Points.hpp
src/classes/Renderer/: Renderer.cpp  Renderer.h
src/classes/ShaderProg/: ShaderProg.cpp  ShaderProg.h
src/classes/VAO/: VAO.cpp  VAO.h  VBLayout.cpp  VBLayout.h
src/classes/VBO/: VBO.cpp  VBO.h
